# RAG_ChatBot-Application

backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/router/: chat.py  create_new_chat.py  create_user.py  delete_chat.py  delete_documents.py  delete_user.py  login_user.py  show_chat_message.py  show_chats.py  show_documents.py  upload_document.py
backend/service/: check_pointer.py  database.py  database_table_schema.py  graph.py  graph_state.py  jwt_token.py  models.py  nodes.py  password_hash.py  prompt.py  request_schema.py  tools.py  vectorstore.py
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: AccountPage.css  AccountPage.jsx  Auth.css  AuthPage.jsx  ChatInterface.css  ChatInterface.jsx  ChatLayout.css  ChatLayout.jsx  DocumentsPage.css  DocumentsPage.jsx
frontend/src/utils/: api.js  chatApi.js
