[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.4",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg-binary>=3.3.4",
    "psycopg[binary]>=3.3.4",
    "pwdlib>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sqlmodel>=0.0.38",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
